--- a/Grid Display/Mondrian Painting/index2.html
+++ b/Grid Display/Mondrian Painting/index2.html
@@ -6,43 +6,45 @@
     <title>Mondrian Painting 2</title>
     <style>
         .container{
-            height: 1000px;
-            width: 1000px;
+             
+            height: 630px;
+            width: 710px;
             background-color: black;
             display: grid;
             gap: 10px;
-            grid-template-columns: 150px 100px 100px 100px 100px 150px 150px 70px;
-            grid-template-rows: 100px 300px 150px 150px 150px 100px 50px;
+            grid-template-columns: 100px 100px 50px 150px 100px 100px 50px;
+            grid-template-rows: 70px 150px 150px 50px 50px 50px 50px;
         }   
         .gray1{
             background-color: gray;
-            grid-area: 1/ 1/ 2 /3;
+            grid-area: 1/1/2/3;
         }
         .white2{
             background-color: white;
-            grid-area: 1/ 3/ 2/ 6;
+            grid-area: 1/3/ 2/ 5;
         }
         .yellow3{
             background-color: yellow;
-            grid-area: 1/ 6/ 2/ 8;
+            grid-area: 1/ 5/ 2/ 7;
         }
         .gray4{
             background-color: gray;
+            grid-area: 1/7/5/8;
         }
         .white5{
             background-color: white;
         }
         .red6{
             background-color: rgb(186, 29, 29);
-            grid-area: 2/2/4/6;
+            grid-area: 2/2/4/5;
         }
         .yellow7{
             background-color: yellow;
-            grid-area: 2/6/3/8;
+            grid-area: 2/5/3/7;
         }
         .gray8{
             background-color: gray;
-            grid-area: 1/8/5/9;
+            grid-area: 3/1/5/2;
         }
         .white9{
             background-color: white;
@@ -52,36 +54,45 @@
         }
         .black11{
             background-color: black;
+            grid-area: 4/2/5/4;
         }
         .gray12{
             background-color: gray;
         }
         .white13{
             background-color: white;
+            grid-area: 4/5/5/7;
         }
         .yellow14{
             background-color: yellow;
+            grid-area: 5/1/8/2;
         }
         .black15{
             background-color: black;
+            grid-area: 5/2/6/4;
         }
         .gray16{
             background-color: gray;
+            grid-area: 5/4/6/5;
         }
         .blue17{
             background-color: blue;
+            grid-area: 5/5/7/7;
         }
         .red18{
             background-color: red;
+            grid-area: 5/7/8/8;
         }
         .white19{
             background-color: white;
+            grid-area: 6/2/8/4;
         }
         .black20{
             background-color: black;
         }
         .white21{
             background-color: white;
+            grid-area: 7/4/8/7;
         }
 
     </style>
@@ -108,7 +119,7 @@
         <div class="item red18"></div>
         <div class="item white19"></div>
         <div class="item black20"></div>
-        <div class="item white 21"></div>
+        <div class="item white21"></div>
     </div>
 </body>
 </html>
